fix tagline and sidebar in header on mobile

--- a/styles/_comp.typo.headings.less
+++ b/styles/_comp.typo.headings.less
@@ -169,7 +169,7 @@
     line-height: (1.25/0.875);
   }
   @media (max-width: 767px) {
-    padding: 10px;
+    padding: 10px 0;
     margin-top: 0; // override margin
   }
 }
